--- a/.github/workflows/pr-deploy.yaml
+++ b/.github/workflows/pr-deploy.yaml
@@ -1,40 +1,28 @@
-name: PR Preview
+name: PR Preview - Cloudflare Pages
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  deploy:
+  deploy-preview:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install Wrangler
-        run: npm install -g wrangler
+      # No build step needed for plain HTML/JS
 
-      - name: Deploy Preview with Wrangler
-        id: deploy
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        run: |
-          # Run deployment and capture output
-          OUTPUT=$(wrangler pages deploy . \
-            --project-name ${{ secrets.CLOUDFLARE_PAGES_PROJECT }} \
-            --branch "pr-${{ github.event.number }}" 2>&1)
-
-          echo "$OUTPUT"
-
-          # Extract preview URL (wrangler prints something like: "Preview available at https://xxxx.pages.dev")
-          PREVIEW_URL=$(echo "$OUTPUT" | grep -oE "https://[a-zA-Z0-9.-]+\.pages\.dev")
-          echo "PREVIEW_URL=$PREVIEW_URL" >> $GITHUB_ENV
-
-      - name: Comment preview URL on PR
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: mshick/add-pr-comment@v2
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
-          message: |
-            🚀 Cloudflare Pages preview deployed!
-
-            👉 **Preview URL**: ${{ env.PREVIEW_URL }}
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: ${{ secrets.CLOUDFLARE_PAGES_PROJECT }}
+          directory: .               # folder with your index.html
+          branch: pr-${{ github.event.number }}
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}  # creates a GitHub Deployment
