--- a/.github/workflows/pr-deploy.yaml
+++ b/.github/workflows/pr-deploy.yaml
@@ -28,3 +28,11 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}  # creates a GitHub Deployment
 
 
+      - name: Comment preview URL on PR
+        uses: mshick/add-pr-comment@v2
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          message: |
+            🚀 Cloudflare Pages preview deployed!
+      
+            👉 **Preview URL:** ${{ steps.pages.outputs.url }}
