--- a/expenses/manifest.json
+++ b/expenses/manifest.json
@@ -2,7 +2,8 @@
     "name": "Expense Report Manager",
     "short_name": "Expenses",
     "description": "Create and manage expense reports with ease. Upload receipts, add dates and titles, and export as PDF.",
-    "start_url": "/expenses",
+    "start_url": "/expenses/",
+    "scope":, "/expenses/",
     "display": "standalone",
     "background_color": "#f3f4f6",
     "theme_color": "#2563eb",
