--- a/expenses/manifest.json
+++ b/expenses/manifest.json
@@ -10,49 +10,49 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "expenses/icons/icon-72.svg",
+            "src": "/expenses/icons/icon-72.svg",
             "sizes": "72x72",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-96.svg",
+            "src": "/expenses/icons/icon-96.svg",
             "sizes": "96x96",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-128.svg",
+            "src": "/expenses/icons/icon-128.svg",
             "sizes": "128x128",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-144.svg",
+            "src": "/expenses/icons/icon-144.svg",
             "sizes": "144x144",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-152.svg",
+            "src": "/expenses/icons/icon-152.svg",
             "sizes": "152x152",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-192.svg",
+            "src": "/expenses/icons/icon-192.svg",
             "sizes": "192x192",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-384.svg",
+            "src": "/expenses/icons/icon-384.svg",
             "sizes": "384x384",
             "type": "image/svg+xml",
             "purpose": "any"
         },
         {
-            "src": "expenses/icons/icon-512.svg",
+            "src": "/expenses/icons/icon-512.svg",
             "sizes": "512x512",
             "type": "image/svg+xml",
             "purpose": "any"
